# non_regression_data_testing

./: .gitignore  README.md  generate_sample_bigquery.sh  generate_sample_duckdb.sh  generate_test_db.sh  pyproject.toml
my_script/: main.py
my_script/src/: __init__.py  constants.py  diff.py  params.py
my_script/src/database/: __init__.py  bigquery_utils.py  duckdb_utils.py  query_utils.py
