[tool.poetry]
name = "my_script"
version = "0.1.0"
description = ""
authors = ["Henok <henok.agbodjogbe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-cli = "^9.1.0"
duckdb = "^1.2.2"
google-cloud-bigquery = "^3.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
